--- a/README
+++ b/README
@@ -23,7 +23,7 @@
 #   e a segunda parte do trabalho, referente a procura da maior palindroma
 #   encotra-se na URL: 
 #   http://avainstitucional.ufpel.edu.br/mod/assignment/view.php?id=30353
-#
+#   desenvolvido de 15 de Abril de 2012 a 8 de junho de 2012
 #   O trabalho foi versionado no GitHub como apoio a programação, para
 #   maior detalhamento das versoes consulte o arquivo "version.txt". O
 #   trabalho foi programado e testado em um computador:
